--- a/apps/client/src/index.css
+++ b/apps/client/src/index.css
@@ -1,69 +1,137 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@tailwind base;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+@layer base {
+  h1 {
+    @apply text-2xl font-medium;
+  }
+  h2 {
+    @apply text-xl;
+  }
+  h3 {
+    @apply text-lg;
+  }
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
+@tailwind components;
+@tailwind utilities;
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  @apply text-gray-700 text-opacity-90 overflow-y-hidden;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.box {
+  @apply rounded-md border-2 border-gray-500 py-2 px-4 font-semibold text-gray-700 transition duration-300 ease-in-out hover:border-opacity-50 hover:shadow-lg;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.boxless {
+  @apply py-2 px-4 font-semibold text-gray-700 my-2 transition duration-300 ease-in-out hover:shadow-lg;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.box:disabled {
+  @apply text-opacity-50 opacity-50 cursor-not-allowed;
+}
+
+.btn-blue {
+  @apply border-blue-700 text-blue-800;
+}
+
+.info {
+  @apply focus:ring-0 focus:outline-none;
+}
+
+.bg-blue {
+  @apply bg-blue-700;
+}
+
+.btn-purple {
+  @apply border-indigo-600 text-indigo-800;
+}
+
+.info-purple {
+  @apply border-indigo-600;
+}
+
+.bg-purple {
+  @apply bg-indigo-600;
+}
+
+.btn-orange {
+  @apply border-orange-600 text-orange-700;
+}
+
+.info-orange {
+  @apply border-orange-600;
+}
+
+.bg-orange {
+  @apply bg-orange-600;
+}
+
+.btn-round {
+  @apply h-12 w-12 rounded-full shadow-md text-white font-extrabold text-2xl hover:shadow-2xl;
+}
+
+.btn-round-orange {
+  @apply bg-orange-600  hover:bg-orange-700;
+}
+
+.btn-round:disabled {
+  @apply bg-gray-500 bg-opacity-25 cursor-not-allowed;
+}
+
+.mobile-height {
+  @apply h-screen;
+}
+
+.page {
+  position: absolute;
+  left: 0px;
+  right: 0px;
+}
+
+.page-enter {
+  opacity: 0;
+  transform: translateY(100%);
+}
+
+.page-enter-active {
+  opacity: 1;
+  transform: translateY(0%);
+  transition: opacity 300ms, transform 300ms;
+}
+
+.page-exit {
+  opacity: 1;
+  transform: translateY(0%);
+}
+
+.page-exit-active {
+  opacity: 0;
+  transform: translateY(-100%);
+  transition: opacity 300ms, transform 300ms;
+}
+
+.pulsate {
+  animation-name: pulsate;
+  animation-duration: 1s;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.6, 1);
+  animation-iteration-count: 5;
+  animation-direction: alternate;
+}
+
+@keyframes pulsate {
+  0% {
+    opacity: 1;
+    transform: scale(1, 1);
   }
-  a:hover {
-    color: #747bff;
+
+  50% {
+    opacity: 0.9;
+    transform: scale(1.03, 1.03);
   }
-  button {
-    background-color: #f9f9f9;
+
+  100% {
+    opacity: 1;
+    transform: scale(0.97, 0.97);
   }
 }
